--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="nurse_text_dark">#0A1931</color>
+    <color name="nurse_text_secondary">#356189</color>
+    <color name="nurse_primary">#1A3D63</color>
+    <color name="nurse_surface_blue">#84ADD0</color>
+    <color name="nurse_background_light">#F6FAFD</color>
 </resources>
